--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,11 @@
 * move /news_archive.php to /news
 * think of a better place for the reference database
+* links to move from CSIRO:
+    * resource.geosciml.org
+        * [CGI geological time vocabulary service](http://auscope-services.arrc.csiro.au/sissvoc/isc2013/collection)
+        * [SPARQL endpoint for International Stratigraphic Chart 2014](http://resource.geosciml.org/sparql/isc2014)
+        * [Vocabularies for the International Stratigraphic Chart](http://resource.geosciml.org/vocabulary/timescale/) (RDF, TTL, HTML)
+
+* get earthresourceml.org handed over to same DNS account
+
+* get Simon's new statigraphy in OWL Time listed
